--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-ody {
-    background-color: #bbbaba;
+/*index.html*/
+
+/*card1.html*/
+body{
+    background-color: #3d3b3b;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +10,7 @@ ody {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-tarjeta{
+.card{
     box-sizing: border-box;
     height: 1140px;
     width: 1440px;
@@ -18,4 +21,22 @@ tarjeta{
     justify-content: center;
     padding: 50px;
     box-shadow: -20px 20px 20px 0 rgba(0, 0, 0, 0.5);
+} 
+
+
+.head{
+    position: absolute;
+    
 }
+
+
+
+.img1{
+    position: relative;
+}
+
+
+
+
+
+
