--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*index.html*/
 
 /*card1.html*/
+
 body{
     background-color: #3d3b3b;
     display: flex;
@@ -10,10 +11,10 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.card{
+.card1{
     box-sizing: border-box;
-    height: 1140px;
-    width: 1440px;
+    height: 246px;
+    width: 309px;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -26,14 +27,90 @@ body{
 
 .head{
     position: absolute;
+    margin-top: 100px;
+    margin-bottom: 20px;
+    display: flex;
     
 }
 
 
+.h1c1{
+    width: 174px;
+    height: 71px;
+    font-size: 25px;
+    color: white;
+
+
+
+}
+
+
+.h3c1{
+    width: 174px;
+    height: 32px;
+    font-size: 11px;
+    color: white;
+
+}
+
+button{
+    width: 71px;
+    height: 24px;
+    border-radius: 24px;
+    margin-top: 100px;
+    background-color: black;
+    color: white;
+}
 
 .img1{
     position: relative;
+    width:  309px;
+    height:  246px;
 }
+
+
+
+
+
+
+
+
+
+/*card2.html*/
+
+body{
+    background-color: #3d3b3b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.card2{
+    box-sizing: border-box;
+    height: 246px;
+    width: 309px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    box-shadow: -20px 20px 20px 0 rgba(0, 0, 0, 0.5);
+} 
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
