--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,38 @@ body{
 
 .img2{
     position: relative;
-    
     width: 302px;
     height: 240px;
 }
 
+
+
+
+
+
+
+
+/*card3.html*/
+
+body{
+    background-color: #3d3b3b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.card3{
+    box-sizing: border-box;
+    height: 125px;
+    width: 379px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -20px 20px 20px 0 rgba(0, 0, 0, 0.5);
+} 
 
 
 
