--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,24 @@ body{
 } 
 
 
+.h1c3{
+    width: 136px;
+    height: 22px;
+    font-size: 15px;
+}
+
+
+.h3c3{
+    width: 230px;
+    height: 23px;
+    font-size: 9px;
+}
+
+
+.buttn{
+    display: flex;
+}
+
 
 
 
