--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,93 @@
 /*index.html*/
 
+.indexhtml{
+    background-color: rgb(87, 86, 86);
+    flex-direction: column;
+}
+
+head{
+    border: 2px sold black;
+    justify-content: center;
+    margin-bottom: 200px;
+}
+
+
+h1{
+    font-size: 50px;
+}
+
+h3{
+    font-size: 25px;
+}
+
+
+
+main{
+    display: flex;
+    gap: 20px;
+}
+
+
+img{
+    width: 800px;
+    height: 500px;
+    border: 2px solid black;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*card1.html*/
 
 body{
     background-color: #3d3b3b;
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
